# cloud_manage_mcp_server

./: .gitignore  MCP_QUICK_REFERENCE.md  MCP_SERVICE_SPECIFICATION.md  Makefile  README.md  README_NEW.md  USAGE_EXAMPLES.md  config.env.example  main.py  mcp_tools_manifest.json  pyproject.toml  setup.sh  test_dg_info.py
providers/: alibaba_provider.py  aws_provider.py  digitalocean_provider.py  vultr_provider.py
utils/: ip_detection.py  security.py
